<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.start.AccountOptionsFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/blury_background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tvAppName"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:drawableStart="@drawable/ic_kleine_shape"
            android:drawablePadding="6dp"
            android:text="@string/kleine"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvRightAdressForShopping"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:gravity="center"
            android:text="@string/right_adress"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@id/tvAppName"
            app:layout_constraintStart_toStartOf="@id/tvAppName"
            app:layout_constraintTop_toBottomOf="@id/tvAppName" />

        <TextView
            android:id="@+id/tvQuality"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/quality"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@id/tvRightAdressForShopping"
            app:layout_constraintStart_toStartOf="@id/tvRightAdressForShopping"
            app:layout_constraintTop_toBottomOf="@id/tvRightAdressForShopping" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            style="@style/blueButtonStyle"
            android:layout_width="@dimen/mediumButtonWidth"
            android:layout_height="@dimen/mediumButtonHeight"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tvQuality"
            app:layout_constraintStart_toStartOf="@id/tvQuality"
            app:layout_constraintTop_toBottomOf="@id/tvQuality" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            style="@style/whiteButtonStyle"
            android:layout_width="@dimen/mediumButtonWidth"
            android:layout_height="@dimen/mediumButtonHeight"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@id/tvQuality"
            app:layout_constraintStart_toStartOf="@id/tvQuality"
            app:layout_constraintTop_toBottomOf="@id/btnRegister" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>