<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.start.IntroductionFragment">

    <ImageView
        android:id="@+id/imgTextureLeft"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/texture_left"
        app:layout_constraintBottom_toBottomOf="@id/guidelineLeftTexture"
        app:layout_constraintDimensionRatio="1:3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imgEllipse"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ellips"
        app:layout_constraintBottom_toBottomOf="@id/guidelineEllipseBottom"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guidelineEllipseRight"
        app:layout_constraintStart_toStartOf="@id/guidelineEllipseLeft"
        app:layout_constraintTop_toTopOf="@id/guidelineEllipseTop" />

    <ImageView
        android:id="@+id/imgTextureRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/texture_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineLeftTexture" />

    <TextView
        android:id="@+id/tvRightAdressForShopping"
        style="@style/h4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tvRightAdressMargin"
        android:gravity="center"
        android:text="@string/right_adress"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/imgEllipse"
        app:layout_constraintEnd_toEndOf="@id/imgEllipse"
        app:layout_constraintStart_toStartOf="@id/imgEllipse"
        app:layout_constraintTop_toTopOf="@id/guidelineLeftTexture" />

    <TextView
        android:id="@+id/tvQuality"
        style="@style/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/quality"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/tvRightAdressForShopping"
        app:layout_constraintStart_toStartOf="@id/tvRightAdressForShopping"
        app:layout_constraintTop_toBottomOf="@id/tvRightAdressForShopping" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStart"
        android:layout_width="@dimen/smallButtonWidth"
        android:layout_height="@dimen/smallButtonHeight"
        style="@style/blueButtonStyle"
        android:text="@string/start"
        app:layout_constraintTop_toBottomOf="@id/tvQuality"
        app:layout_constraintStart_toStartOf="@id/tvQuality"
        app:layout_constraintEnd_toEndOf="@id/tvQuality"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeftTexture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.19" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />


</androidx.constraintlayout.widget.ConstraintLayout>